--- a/TestProject/employee/templates/employee/home.html
+++ b/TestProject/employee/templates/employee/home.html
@@ -1,8 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1 class="alert alert-info">Employee Management
-        <a href="{% url 'add' %}" class="btn btn-primary btn-lg" role="button">Add Employee</a>
-        <a href="{% url 'dept' %}" class="btn btn-primary btn-lg" role="button">Add Department</a></h1>
+        <a href="{% url 'add' %}" class="btn btn-primary btn-md" role="button">Add Employee</a>
+        <a href="{% url 'dept' %}" class="btn btn-primary btn-md" role="button">Add Department</a>
+        <div align="right" style="float:right">
+            <a href="{% url 'login' %}" class="btn btn-primary btn-md" role="button">Login</a>
+            <a href="{% url 'register' %}" class="btn btn-primary btn-md" role="button">Register</a>
+        </div>
+
+    </h1>
+
+
 
     <table class="table">
       <thead class="thead-dark">
