--- a/TestProject/employee/templates/base.html
+++ b/TestProject/employee/templates/base.html
@@ -15,6 +15,13 @@
     <title> {% block title %}{% endblock %} </title>
 </head>
 <body>
+    {% if messages %}
+                {% for msg in messages%}
+                        <div class="alert alert-{{ msg.tags }}">
+                            {{ msg }}
+                        </div>
+                {% endfor %}
+            {% endif %}
     {% block content %}{% endblock %}
 
     <script crossorigin="anonymous"
