--- a/TestProject/users/templates/users/logout.html
+++ b/TestProject/users/templates/users/logout.html
@@ -3,7 +3,8 @@
     <div class="ml-5 mt-2">
     <h2>You have been Logged Out</h2>
         <div class="border-top pt-3">
-                 <a class="btn btn-outline-info" href="{% url 'login' %}">Log In Again</a>
+            <a class="btn btn-outline-info" href="{% url 'login' %}">Log In Again</a>
+            <a class="btn btn-outline-info" href="{% url 'home' %}">Home</a>
         </div>
     </div>
 {% endblock content %}
